Try another workaround for the scrollbar issue

--- a/src/gui/gtk.css
+++ b/src/gui/gtk.css
@@ -9,3 +9,12 @@ toolbar {
 .main-toolbar button {
 	padding: 6px;
 }
+
+scrollbar slider {
+	/* Size of the slider */
+	min-width: 12px;
+	min-height: 12px;
+	border-radius: 15px;
+	/* Padding around the slider */
+	border: 1px solid #606307;
+}
